# Data-Science-AI-Portfolio

./: .gitignore  .pre-commit-config.yaml  LICENSE  PORTFOLIO_ROADMAP.md  README.md  pyproject.toml  requirements-dev.txt
.github/workflows/: ci.yml  tests.yml
Citi Bike Time Series/: .coveragerc  .gitignore  README.md  requirements.txt
Citi Bike Time Series/data/sample_outputs/: anomaly_hours.csv  forecast_backtest_metrics.csv  top_stations.csv
Citi Bike Time Series/docs/: CASE_STUDY.md  CHART_MAP.md  CODE_QUALITY.md  DASHBOARD_AND_SIMULATOR.md  DATA_DICTIONARY.md  LIMITATIONS.md  MEASURES.md  METHODOLOGY.md  MODEL_CARD.md  MULTI_MONTH_PROOF.md  PORTFOLIO_WRITEUP.md  PROJECT_STRUCTURE.md  PUBLISHING_CHECKLIST.md  ROADMAP.md  STATION_CLUSTER_FORECASTING.md  TIME_SERIES_SHOWCASE.md
Citi Bike Time Series/outputs/: autocorrelation_profile.csv  bike_mix.csv  decision_report.html  decision_report_source_notes.md  decomposition_components.csv  forecast_backtest_scored.csv  hourly_profile.csv  lag_feature_correlations.csv  member_mix.csv  multi_month_backtest_scored.csv  multi_month_daily_profile.csv  multi_month_hourly_profile.csv  multi_month_model_metrics.csv  multi_month_origin_metrics.csv  multi_month_proof.html  multi_month_proof_summary.json  multi_month_source_inventory.csv  multi_month_top_stations.csv  portfolio_dashboard.html  portfolio_decision_simulator.csv  portfolio_feature_family_lift.csv  profile_summary.json  report.html  rolling_backtest_metrics.csv  rolling_backtest_origin_metrics.csv  rolling_backtest_scored.csv  seasonality_profile.csv  station_cluster_assignments.csv  station_cluster_capacity_priorities.csv  station_cluster_events.csv  station_cluster_forecast.html  station_cluster_forecast_summary.json  station_cluster_model_lift.csv  station_cluster_model_metrics.csv  station_cluster_origin_metrics.csv  station_cluster_source_inventory.csv  station_cluster_station_metadata.csv  station_cluster_summary.csv  station_cluster_weather_hourly.csv  time_series_showcase.html  (+2 more)
Citi Bike Time Series/src/: citibike_decision_report.py  citibike_multi_month_proof.py  citibike_portfolio_dashboard.py  citibike_station_cluster_forecast.py  citibike_time_series_profile.py  citibike_time_series_showcase.py
Citi Bike Time Series/tests/: conftest.py  test_decision_and_showcase_core.py  test_multi_month_core.py  test_portfolio_dashboard_core.py  test_profile_core.py  test_station_cluster_core.py
Linked Lists/: Linked List.py  test_linked_deque.py  test_linked_list.py  test_property_invariants.py  test_self_organizing_linked_list.py  test_skip_list.py  test_sparse_matrix_linked_list.py  test_typing_and_visualization.py
Linked Lists/linked_list/: __init__.py  deque.py  linked_list.py  multilevel_list.py  nodes.py  positional_list.py  self_organizing_list.py  skip_list.py  sorted_list.py  sparse_matrix.py  unrolled_list.py
Linked Lists/linked_list/list_functions/: access.py  base.py  functional.py  iteration.py  linked_list.py  mutation.py  sort_merge.py  utility.py
Linked Lists/linked_list/nodes/: __init__.py  base_node.py  doubly.py  mixins.py  singly.py
Linked_List_Showcase/: README.md  pyproject.toml  requirements-dev.txt
Linked_List_Showcase/benchmarks/: benchmark_structures.py
Linked_List_Showcase/docs/: api_reference.md  benchmark_results.md  complexity.md  demo_script.md  design_and_edge_cases.md  linked_structures_walkthrough.md  package_positioning.md  package_readiness.md  portfolio_showcase.md  real_world_use_cases.md
Linked_List_Showcase/examples/: README.md  _bootstrap.py  adaptive_command_palette.py  document_outline.py  job_queue.py  leaderboard.py  lru_cache.py  product_ops_demo.py  round_robin_scheduler.py  sparse_recommender.py  text_buffer_blocks.py  text_cursor.py
Linked_List_Showcase/src/linked_list/: __init__.py  _display.py  deque.py  multilevel_list.py  positional_list.py  py.typed  self_organizing_list.py  skip_list.py  sorted_list.py  sparse_matrix.py  unrolled_list.py  visualize.py
Linked_List_Showcase/src/linked_list/list_functions/: __init__.py  access.py  base.py  functional.py  iteration.py  linked_list.py  mutation.py  sort_merge.py  utility.py
Linked_List_Showcase/src/linked_list/nodes/: __init__.py  base_node.py  doubly.py  mixins.py  singly.py
Linked_List_Showcase/tests/: __init__.py  test_coverage_edges.py  test_linked_deque.py  test_linked_list.py  test_multilevel_linked_list.py  test_positional_linked_list.py  test_product_ops_demo.py  test_property_invariants.py  test_self_organizing_linked_list.py  test_skip_list.py  test_sorted_linked_list.py  test_sparse_matrix_linked_list.py  test_typing_and_visualization.py  test_unrolled_linked_list.py
Linked_List_Showcase/tools/: run_check.py
benchmarks/: benchmark_structures.py
docs/: api_reference.md  complexity.md  linked_structures_walkthrough.md  package_readiness.md
examples/: README.md  _bootstrap.py  job_queue.py  leaderboard.py  lru_cache.py  sparse_recommender.py  text_buffer_blocks.py
linked-structure-lab/examples/: document_outline.py  text_cursor.py
linked-structure-lab/src/linked_list/: positional_list.py  sorted_list.py
linked-structure-lab/src/linked_list/list_functions/: linked_list.py  sort_merge.py
linked-structure-lab/src/linked_list/nodes/: mixins.py  singly.py
linked-structure-lab/tests/: test_positional_linked_list.py
