[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "linked-structure-lab"
version = "0.1.0"
description = "Educational linked data structures with tests, examples, and typed APIs."
readme = "README.md"
requires-python = ">=3.12"
license = { text = "MIT" }
authors = [
    { name = "Data Science AI Portfolio contributors" },
]
keywords = [
    "data-structures",
    "linked-list",
    "deque",
    "skip-list",
    "sparse-matrix",
    "education",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Education",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Typing :: Typed",
]
dependencies = []

[project.optional-dependencies]
dev = [
    "coverage>=7.6",
    "hypothesis>=6.100",
    "mypy>=1.10",
    "pre-commit>=3.7",
    "pytest>=8.2",
    "ruff>=0.5",
]
test = [
    "coverage>=7.6",
    "hypothesis>=6.100",
    "pytest>=8.2",
]
bench = []
docs = []

[project.urls]
Homepage = "https://github.com/matt-dawidowicz/Data-Science-AI-Portfolio"
Repository = "https://github.com/matt-dawidowicz/Data-Science-AI-Portfolio"

[tool.setuptools]
package-dir = { "" = "src" }

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
linked_list = ["py.typed"]

[tool.coverage.run]
branch = true
source = ["src/linked_list"]

[tool.coverage.report]
show_missing = true
skip_empty = true
fail_under = 100

[tool.mypy]
python_version = "3.12"
files = ["src", "tests", "examples", "benchmarks", "tools"]
mypy_path = ["src"]
check_untyped_defs = true
disallow_incomplete_defs = true
no_implicit_optional = true
pretty = true
show_error_codes = true
warn_redundant_casts = true
warn_return_any = false
warn_unreachable = true
warn_unused_configs = true
warn_unused_ignores = false

[[tool.mypy.overrides]]
module = ["linked_list.list_functions.*"]
disable_error_code = [
    "attr-defined",
    "arg-type",
    "call-arg",
    "call-overload",
    "has-type",
    "misc",
    "name-defined",
    "operator",
    "unreachable",
]

[[tool.mypy.overrides]]
module = ["linked_list.nodes.*"]
disable_error_code = [
    "misc",
    "union-attr",
]

[[tool.mypy.overrides]]
module = ["tests.*"]
disable_error_code = [
    "assignment",
    "index",
    "union-attr",
    "var-annotated",
]

[tool.pytest.ini_options]
addopts = "-ra"
python_files = ["test_*.py"]
pythonpath = ["src"]
testpaths = ["tests"]

[tool.ruff]
line-length = 79
target-version = "py312"

[tool.ruff.lint]
select = [
    "B",
    "E",
    "F",
    "I",
    "UP",
]
ignore = [
    # The explicit generic spellings remain readable and tooling-friendly for
    # this educational code.
    "UP037",
    "UP046",
]

[tool.ruff.lint.per-file-ignores]
"examples/*.py" = ["I001"]

[tool.ruff.format]
quote-style = "double"
